fix tests and add doc examples

--- a/.config/hakari.toml
+++ b/.config/hakari.toml
@@ -33,6 +33,7 @@ workspace-members = [
     "compute_api",
     "consumption_metrics",
     "desim",
+    "json",
     "metrics",
     "pageserver_api",
     "postgres_backend",
