Switch rsyslog stream driver to gtls
It seems GnuTLS driver for rsyslog is slightly better supported than
OpenSSL. StreamDriver.CheckExtendedKeyPurpose option was the decisive
factor to pick it over OpenSSL. While not fundamentally increasing the
security, endorsing better practices.

Additionally, accepting expired certificates is set to log a warning,
but still accepting, by default. This does not seem like a good security
practice, so bundling the rejection here too,

--- a/compute_tools/src/config_template/compute_audit_rsyslog_template.conf
+++ b/compute_tools/src/config_template/compute_audit_rsyslog_template.conf
@@ -31,9 +31,11 @@ if ( $syslogtag == 'pgaudit_log') then {{
     queue.type="linkedList"
     queue.size="1000"
     action.ResumeRetryCount="10"
-    StreamDriver="ossl"
+    StreamDriver="gtls"
     StreamDriverMode="1"
     StreamDriverAuthMode="x509/name"
     StreamDriverPermittedPeers="{remote_syslog_host}"
+    StreamDriver.CheckExtendedKeyPurpose="on"
+    StreamDriver.PermitExpiredCerts="off"
   )
 }}
