Use url crate and hostname-validator for address parsing and validation
We did not do any actual validation for hostname. Parsing with `url`
crate and validating with hostname-validator should be rather robust.

--- a/compute_tools/Cargo.toml
+++ b/compute_tools/Cargo.toml
@@ -27,6 +27,7 @@ fail.workspace = true
 flate2.workspace = true
 futures.workspace = true
 http.workspace = true
+hostname-validator = "1.1"
 indexmap.workspace = true
 itertools.workspace = true
 jsonwebtoken.workspace = true
