Add cache for relation kind

--- a/pgxn/neon/Makefile
+++ b/pgxn/neon/Makefile
@@ -18,6 +18,7 @@ OBJS = \
 	neon_walreader.o \
 	pagestore_smgr.o \
 	relsize_cache.o \
+	relkind_cache.o \
 	unstable_extensions.o \
 	walproposer.o \
 	walproposer_pg.o \
