accept dummy 'testing' feature

--- a/pgxn/neon/communicator/Cargo.toml
+++ b/pgxn/neon/communicator/Cargo.toml
@@ -7,6 +7,11 @@ edition.workspace = true
 [lib]
 crate-type = ["staticlib"]
 
+[features]
+# 'testing' feature is currently unused in the communicator, but we accept it for convenience of
+# calling build scripts, so that you can pass the same feature to all packages.
+testing = []
+
 [dependencies]
 neon-shmem.workspace = true
 workspace_hack = { version = "0.1", path = "../../../workspace_hack" }
