--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,7 @@ typing-extensions = "^4.12.2"
 PyJWT = {version = "^2.1.0", extras = ["crypto"]}
 requests = "^2.32.4"
 protobuf = "^6.31.1"
+types-protobuf="^6.30.2"
 pytest-xdist = "^3.3.1"
 asyncpg = "^0.30.0"
 aiopg = "^1.4.0"
@@ -64,6 +65,7 @@ build-backend = "poetry.core.masonry.api"
 exclude = [
     "^vendor/",
     "^target/",
+    "test_runner/regress/data/profile_pb2.py",
     "test_runner/performance/pgvector/loaddata.py",
 ]
 check_untyped_defs = true
