Support both TLS and plaintext syslog protocols at the same time
Rewrite the configuration so that it support both TLS and plaintext
remote syslog with a boolean selector. This is required for smooth
transition.

--- a/compute_tools/src/config_template/compute_audit_rsyslog_template.conf
+++ b/compute_tools/src/config_template/compute_audit_rsyslog_template.conf
@@ -15,6 +15,9 @@ global(
   DefaultNetstreamDriverCAFile="/etc/ssl/certs/ca-certificates.crt"
 )
 
+# Whether the remote syslog receiver uses tls
+set $.remote_syslog_tls = "{remote_syslog_tls}";
+
 # Construct json, endpoint_id and project_id as additional metadata
 set $.json_log!endpoint_id = "{endpoint_id}";
 set $.json_log!project_id = "{project_id}";
@@ -26,16 +29,24 @@ template(name="PgAuditLog" type="string"
 
 # Forward to remote syslog receiver (over TLS)
 if ( $syslogtag == 'pgaudit_log') then {{
-  action(type="omfwd" target="{remote_syslog_host}" port="{remote_syslog_port}" protocol="tcp"
-    template="PgAuditLog"
-    queue.type="linkedList"
-    queue.size="1000"
-    action.ResumeRetryCount="10"
-    StreamDriver="gtls"
-    StreamDriverMode="1"
-    StreamDriverAuthMode="x509/name"
-    StreamDriverPermittedPeers="{remote_syslog_host}"
-    StreamDriver.CheckExtendedKeyPurpose="on"
-    StreamDriver.PermitExpiredCerts="off"
-  )
+  if ( $.remote_syslog_tls == "true") {{
+    action(type="omfwd" target="{remote_syslog_host}" port="{remote_syslog_port}" protocol="tcp"
+      template="PgAuditLog"
+      queue.type="linkedList"
+      queue.size="1000"
+      action.ResumeRetryCount="10"
+      StreamDriver="gtls"
+      StreamDriverMode="1"
+      StreamDriverAuthMode="x509/name"
+      StreamDriverPermittedPeers="{remote_syslog_host}"
+      StreamDriver.CheckExtendedKeyPurpose="on"
+      StreamDriver.PermitExpiredCerts="off"
+    )
+  }} else {{
+    action(type="omfwd" target="{remote_syslog_host}" port="{remote_syslog_port}" protocol="tcp"
+      template="PgAuditLog"
+      queue.type="linkedList"
+      queue.size="1000"
+      action.ResumeRetryCount="10"
+  }}
 }}
